--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "@react-native-community/masked-view": "^0.1.6",
     "@react-navigation/native": "^5.0.5",
     "@react-navigation/stack": "^5.0.5",
+    "axios": "^0.19.2",
+    "history": "^4.10.1",
+    "immer": "^6.0.6",
     "react": "^16.9.0",
     "react-native": "^0.61.5",
     "react-native-gesture-handler": "^1.6.0",
@@ -22,16 +25,14 @@
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.0.0-beta.4",
     "react-navigation": "^4.1.1",
+    "react-navigation-redux-helpers": "^4.0.1",
     "react-navigation-tabs": "^2.7.0",
-    "styled-components": "^5.0.1",
-    "axios": "^0.19.2",
-    "history": "^4.10.1",
-    "immer": "^6.0.6",
-    "redux": "^4.0.5",
     "react-redux": "^7.2.0",
-    "redux-saga": "^1.1.3",
     "reactotron-redux": "^3.1.3",
-    "reactotron-redux-saga": "^4.2.3"
+    "reactotron-redux-saga": "^4.2.3",
+    "redux": "^4.0.5",
+    "redux-saga": "^1.1.3",
+    "styled-components": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
