--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-navigation-redux-helpers": "^4.0.1",
     "react-navigation-tabs": "^2.7.0",
     "react-redux": "^7.2.0",
+    "reactotron-react-native": "^5.0.0",
     "reactotron-redux": "^3.1.3",
     "reactotron-redux-saga": "^4.2.3",
     "redux": "^4.0.5",
