--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "reactotron-redux": "^3.1.3",
     "reactotron-redux-saga": "^4.2.3",
     "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
     "redux-saga": "^1.1.3",
     "styled-components": "^5.0.1"
   },
