--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "immer": "^6.0.6",
     "react": "^16.9.0",
     "react-native": "^0.61.5",
+    "react-native-easy-toast": "^1.2.0",
     "react-native-gesture-handler": "^1.6.0",
     "react-native-modal": "^11.5.6",
     "react-native-reanimated": "^1.7.0",
+    "react-native-redux-toast": "^1.0.3",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.0.0-beta.4",
     "react-native-side-menu": "^1.1.3",
